--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "cross-env": "^5.2.0",
-    "koa": "^2.6.2",
-    "bootstrap-vue": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6"
+    "bootstrap-vue": "^2.0.0",
+    "crc": "^3.8.0",
+    "cross-env": "^5.2.0",
+    "gpio": "^0.2.10",
+    "koa": "^2.6.2",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
