--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cross-env": "^5.2.0",
     "gpio": "^0.2.10",
     "koa": "^2.6.2",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "serialport": "^8.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
